# BadButBetterRaytracer

./: CMakeLists.txt  Makefile  README.md  Raytracer.make  premake5.lua
src/: DrawingObjects.cpp  DrawingObjects.hpp  Raytraiser.cpp  Raytraiser.hpp  Utils.cpp  Utils.hpp  main.cpp
src/.obsidian/: workspace.json
